--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
+<head>
+    <title>Автошкола</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#000000"/>
+    <link rel="manifest" href="./manifest.json">
+    <link rel="stylesheet" href="style.css">
+</head>
 
-<link rel="manifest" href="/manifest.json">
-
-<body>
-
-  <script>
+<script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/service-worker.js')
+        navigator.serviceWorker.register('./service-worker.js')
           .then(registration => console.log('ServiceWorker registered'))
           .catch(err => console.log('Error: ', err));
       });
     }
-  </script>
+</script>
+
 </body>
-</html>
-<!DOCTYPE html>
-<html>
 <head>
     <title>Автошкола</title>
     <link rel="stylesheet" href="style.css">
